<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">

        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            tools:src="@tools:sample/avatars" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="3.5"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:stepSize="1"
            android:layout_gravity="center"
            android:theme="@style/Widget.AppCompat.ActionBar" />

        <TextView
            android:id="@+id/judulDetail"
            style="@style/TextContent.HeadlineMedium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="25sp"
            tools:text="@string/book_name" />

        <TextView
            style="@style/TextContent.HeadlineMedium.Bold"
            android:id="@+id/priceDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:text="@string/price" />

        <TextView
            style="@style/TextContent.HeadlineMedium.Bold"
            android:id="@+id/authorDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:text="@string/outhor" />

        <TextView
            android:id="@+id/descriptionDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            tools:text="@string/description" />

        <Button
            style="@style/ButtonGeneral"
            android:text="@string/buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</ScrollView>